--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <div class="social-media">
 
                         <a class="github media" href="https://github.com/RetroGhosty" target="_blank">
-                            <i class='fab fa-discord'></i>
+                            <i class='fab fa-github'></i>
                             GITHUB
                         </a>
 
