--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </section>
     <footer id="foot-page">
         <div class="analytics">
-            Website has been visited <span id="count"></span> times.
+            Visitors: <span id="count"></span>
         </div>
         <div class="foot-info">
             <div class="year">2022 - 2022</div>
