--- a/index.html
+++ b/index.html
@@ -56,12 +56,44 @@
 
                 </div>
                 <div class="main-dish">
-                    <h1>About me</h1>
-                    <hr>
-                    Sup,
-                    <p>I waste my day by watching youtube, twitch, reading light novels or manga/manwha/manhua.<br>
-                    I like EDM and JPOP</p>
-
+                    <div class="about-me dishes ">
+                        <h2 class="right-border">About me</h2>
+                        <p>Sup, I just do what I feel like to do but I sit in front of my computer most of the day. I love listening to music and watching my favorite youtuber and twitch streamer.</p>        
+                        <h2 class="right-border">Hobbies</h2>
+                        <ul class="fa-ul">
+                            <li>
+                                <span class="fa-li"><i class="fab fa-twitch"></i></span> 
+                                <span>Degenerate man that spend most of the day in twitch chat</span>
+                            </li>
+                            <li>
+                                <span class="fa-li"><i class="fas fa-headset"></i></span>
+                                <span>Listening to EDM and JPOP music</span>
+                            </li>
+                            <li>
+                                <span class="fa-li"><i class="fas fa-code"></i></span>
+                                <span>Coding</span>
+                            </li>
+                            <li>
+                                <span class="fa-li"><i class="fas fa-book-open"></i></span>
+                                <span>Reading</span>
+                            </li>
+                            
+                        </ul>                
+                    </div>
+                    <div class="twitch_streamer dishes">
+                        <h2 class="right-border">Favorite twitch streamers</h2>
+                        <ul class="ul-inline">
+                            <li>
+                                <a href="https://www.twitch.tv/xqc" target="_blank">
+                                    <img class="img-fluid" src="https://static-cdn.jtvnw.net/jtv_user_pictures/xqc-profile_image-9298dca608632101-300x300.jpeg" alt="">
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://www.twitch.tv/loltyler1" target="_blank">                                <img class="img-fluid" src="https://static-cdn.jtvnw.net/jtv_user_pictures/f3591dbe4ee3d94b-profile_image-300x300.png" alt="">
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
 
             </div>
@@ -69,7 +101,7 @@
     </section>
     <footer id="foot-page">
         <div class="analytics">
-            Visitors: <span id="count"></span>
+            Website has been visited <span id="count"></span> times.
         </div>
         <div class="foot-info">
             <div class="year">2022 - 2022</div>
