--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@
     </section>
     <footer id="foot-page">
         <div class="foot-info">
+            <div class="analytics">
+                Website has been visited <span id="count"></span> times.
+            </div>
+            
             <div class="year">2022 - 2022</div>
             <div class="author">Made by: <span>Talipapa</span></div>
         </div>
