--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="side">
                     <div class="profile-info">
                         <img src="https://media.tenor.com/dSGkJLYM4gAAAAAC/pixel-samurai.gif" alt="">
-                        <div class="name">Talipapa</div>
+                        <div class="name">John Davila</div>
                         <div class="description">Compete with yourself not with others</div>
                     </div>
                     <div class="social-media">
