--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
                 <div class="main-dish">
                     <div class="about-me dishes ">
                         <h2 class="right-border">About me</h2>
-                        <p>Sup, I just do what I feel like to do but I sit in front of my computer most of the day. I love listening to music and watching my favorite youtuber and twitch streamer.</p>        
+                        <p>
+                        My name is John Davila, A secod year college student currently studying at Colegio De Montalban. I'm currently looking for a team and someone who could lead me along with projects. Hit me up on discord if you are interested. talipapa#0854</p>     
                         <h2 class="right-border">Hobbies</h2>
                         <ul class="fa-ul">
                             <li>
