--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             </div>
             
             <div class="year">2022 - 2022</div>
-            <div class="author">Made by: <span>Talipapa</span></div>
+            <div class="author">Made by: <span>John Davila</span></div>
         </div>
          
     </footer>
