--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <ul class="fa-ul">
                             <li>
                                 <span class="fa-li"><i class="fab fa-twitch"></i></span> 
-                                <span>Twitch chatter</span>
+                                <span>The twitch community is great, finally built up enough courage to share my favorite streamer.</span>
                             </li>
                             <li>
                                 <span class="fa-li"><i class="fas fa-headset"></i></span>
