--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <div class="about-me dishes ">
                         <h2 class="right-border">About me</h2>
                         <p>
-                        My name is John Davila, A secod year college student looking for a team or someone who could lead me along with projects. Hit me up on discord if you are interested. talipapa#0854</p>     
+                        My name is John Davila, A second year college student looking for a team or someone who could lead me along with projects. Hit me up on discord if you are interested. talipapa#0854</p>     
                         <h2 class="right-border">Hobbies</h2>
                         <ul class="fa-ul">
                             <li>
